--- a/index2.html
+++ b/index2.html
@@ -20,9 +20,19 @@
 			background-size: cover;
 			background-repeat: no-repeat;
 		}
+    #countdown {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 5px;
+      color: #000;
+      background: #FFF;
+      text-decoration: none;
+    }
 	</style>
 </head>
 <body>
+  <button class="btn" id="countdown">Count Down</button>
   <div id="container"></div>
 	<script src="./node_modules/three/build/three.js"></script>
 	<script src="./node_modules/tween.js/src/Tween.js"></script>
