--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 </head>
 <body>
   <button class="btn" id="countdown">Count Down</button>
-  <div id="container"></div>
+	<div id="container"></div>
+	<script src='./jquery.min.js'></script>
 	<script src="./node_modules/three/build/three.js"></script>
 	<script src="./node_modules/tween.js/src/Tween.js"></script>
   <script src="./dat.gui/build/dat.gui.js"></script>
-  <script src="./index2.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
