--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	</style>
 </head>
 <body>
-  <button class="btn" id="countdown">Count Down</button>
+  <!-- <button class="btn" id="countdown">Count Down</button> -->
 	<div id="container"></div>
 	<script src='./jquery.min.js'></script>
-	<script src="./node_modules/three/build/three.js"></script>
+	<script src="./node_modules/three/build/three.min.js"></script>
 	<script src="./node_modules/tween.js/src/Tween.js"></script>
-  <script src="./dat.gui/build/dat.gui.js"></script>
+  <!-- <script src="./dat.gui/build/dat.gui.js"></script> -->
   <script src="./index.js"></script>
 </body>
 </html>
